tests/pass/InterfaceExtendingClass.java
//package pass;
//
//public class InterfaceExtendingClass implements InterfacePass{
//	public int interfacePass(int i) {
//		return i;
//	}
//}